# OpenArkCompiler

./: .clang-tidy  .gitignore  .gn  BUILD.gn  Dockerfile  Makefile  README.md  Readme.md  Readme_zh.md  test.text
src/: BUILD.gn
src/huawei_secure_c/: BUILD.gn
src/huawei_secure_c/include/: securec.h  securectype.h
src/huawei_secure_c/src/: Makefile  fscanf_s.c  fwscanf_s.c  gets_s.c  input.inl  memcpy_s.c  memmove_s.c  memset_s.c  output.inl  scanf_s.c  secinput.h  securecutil.c  securecutil.h  secureinput_a.c  secureinput_w.c  secureprintoutput.h  secureprintoutput_a.c  secureprintoutput_w.c  snprintf_s.c  sprintf_s.c  sscanf_s.c  strcat_s.c  strcpy_s.c  strncat_s.c  strncpy_s.c  strtok_s.c  swprintf_s.c  swscanf_s.c  vfscanf_s.c  vfwscanf_s.c  vscanf_s.c  vsnprintf_s.c  vsprintf_s.c  vsscanf_s.c  vswprintf_s.c  vswscanf_s.c  vwscanf_s.c  wcscat_s.c  wcscpy_s.c  wcsncat_s.c  (+5 more)
src/maple_be/: BUILD.gn
src/maple_be/mdgen/: gendef.py
src/maple_driver/: BUILD.gn
src/maple_driver/defs/: default_options.def  phases.def  supported_compilers.def
src/maple_driver/include/: compiler.h  compiler_factory.h  compiler_selector.h  default_options.h  driver_option_common.h  driver_runner.h  file_utils.h  jbc2mpl_option.h  mpl_options.h  option_descriptor.h  option_parser.h  safe_exe.h  supported_compilers.h  usages.h
src/maple_driver/src/: compiler.cpp  compiler_factory.cpp  compiler_selector.cpp  driver_option_common.cpp  driver_runner.cpp  file_utils.cpp  jbc2mpl_compiler.cpp  maple.cpp  maple_comb_compiler.cpp  mpl_options.cpp  mplcg_compiler.cpp  option_parser.cpp
src/maple_ipa/: BUILD.gn
src/maple_ipa/include/: call_graph.h  callgraph.h  clone.h  interleaved_manager.h  module_phase.h  module_phase_manager.h  module_phases.def  retype.h
src/maple_ipa/src/: call_graph.cpp  callgraph.cpp  clone.cpp  interleaved_manager.cpp  module_phase_manager.cpp  retype.cpp
src/maple_ir/: BUILD.gn
src/maple_ir/include/: all_attributes.def  bin_mir_file.h  bin_mpl_export.h  bin_mpl_import.h  bin_mplt.h  binary_op.def  cfg_primitive_types.h  global_tables.h  intrinsic_java.def  intrinsic_op.h  intrinsics.def  intrinsics.h  ir_safe_cast_traits.def  java_eh_lower.h  keywords.def  lexer.h  memory_order_attrs.def  metadata_layout.h  mir_builder.h  mir_config.h  mir_const.h  mir_function.h  mir_lower.h  mir_module.h  mir_nodes.h  mir_parser.h  mir_pragma.h  mir_preg.h  mir_symbol.h  mir_symbol_builder.h  mir_type.h  opcode_info.h  opcodes.def  opcodes.h  option.h  parser_opt.h  prim_types.def  prim_types.h  printing.h  simplifyintrinsics.def  (+3 more)
src/maple_ir/src/: bin_mpl_export.cpp  bin_mpl_import.cpp  driver.cpp  global_tables.cpp  intrinsics.cpp  lexer.cpp  mir_builder.cpp  mir_const.cpp  mir_function.cpp  mir_lower.cpp  mir_module.cpp  mir_nodes.cpp  mir_parser.cpp  mir_pragma.cpp  mir_symbol.cpp  mir_symbol_builder.cpp  mir_type.cpp  opcode_info.cpp  option.cpp  parser.cpp  printing.cpp
src/maple_me/: BUILD.gn
src/maple_me/include/: alias_analysis_table.h  alias_class.h  bb.h  dominance.h  dse.h  func_emit.h  hdse.h  irmap.h  me_abco.h  me_alias_class.h  me_analyze_rc.h  me_analyzector.h  me_bb_layout.h  me_builder.h  me_bypath_eh.h  me_cfg.h  me_cfg_mst.h  me_cond_based.h  me_cond_based_npc.h  me_cond_based_rc.h  me_const.h  me_critical_edge.h  me_delegate_rc.h  me_dominance.h  me_dse.h  me_emit.h  me_function.h  me_hdse.h  me_inequality_graph.h  me_ir.h  me_irmap.h  me_loop_analysis.h  me_loop_canon.h  me_lower_globals.h  me_may2dassign.h  me_option.h  me_pgo_instrument.h  me_phase.h  me_phase_manager.h  me_phases.def  (+28 more)
src/maple_me/src/: alias_analysis_table.cpp  alias_class.cpp  bb.cpp  dominance.cpp  dse.cpp  func_emit.cpp  hdse.cpp  irmap.cpp  irmap_emit.cpp  me_abco.cpp  me_alias_class.cpp  me_analyze_rc.cpp  me_analyzector.cpp  me_bb_layout.cpp  me_builder.cpp  me_bypath_eh.cpp  me_cfg.cpp  me_cond_based_opt.cpp  me_critical_edge.cpp  me_delegate_rc.cpp  me_dominance.cpp  me_dse.cpp  me_emit.cpp  me_function.cpp  me_hdse.cpp  me_inequality_graph.cpp  me_ir.cpp  me_irmap.cpp  me_loop_analysis.cpp  me_loop_canon.cpp  me_lower_globals.cpp  me_may2dassign.cpp  me_option.cpp  me_phase_manager.cpp  me_profile_gen.cpp  me_profile_use.cpp  me_prop.cpp  me_rc_lowering.cpp  me_rename2preg.cpp  me_ssa.cpp  (+21 more)
src/maple_phase/include/: phase.h  phase_impl.h  phase_manager.h
src/maple_util/include/: error_code.h  factory.h  file_layout.h  itab_util.h  literal_str_name.h  literalstrname.h  meta.h  mpl_logging.h  mpl_number.h  mpl_scheduler.h  mpl_timer.h  mpl_utils.h  muid.h  name_mangler.h  namemangler.h  option_parser.h  profile.h  profile_type.h  ptr.h  ptr_list_ref.h  safe_cast.h  safe_ptr.h  string_utils.h  utils.h  version.h
src/maple_util/src/: profile.cpp
src/mempool/include/: maple_string.h  mempool.h  mempool_allocator.h
src/mpl2mpl/: BUILD.gn
src/mpl2mpl/include/: analyzector.h  annotation_analysis.h  class_hierarchy.h  class_init.h  coderelayout.h  constantfold.h  gen_check_cast.h  java_intrn_lowering.h  muid_replacement.h  native_stub_func.h  reflection_analysis.h  vtable_analysis.h  vtable_impl.h
src/mpl2mpl/src/: analyzector.cpp  annotation_analysis.cpp  class_hierarchy.cpp  class_init.cpp  coderelayout.cpp  constantfold.cpp  gen_check_cast.cpp  java_eh_lower.cpp  java_intrn_lowering.cpp  muid_replacement.cpp  native_stub_func.cpp  reflection_analysis.cpp  vtable_analysis.cpp  vtable_impl.cpp
src/mplfe/: BUILD.gn
src/mplfe/doc/: feir_design.md  mplfe_guide.md
src/mplfe/test/: BUILD.gn  base64_test.cpp  basic_io_test.cpp  fe_algorithm_test.cpp  fe_file_ops_test.cpp  fe_file_type_test.cpp  fe_function_process_schedular_test.cpp  fe_function_test.cpp  fe_struct_elem_info_test.cpp  fe_type_hierarchy_test.cpp  fe_type_manager_test.cpp  fe_utils_test.cpp  feir_builder_test.cpp  feir_stmt_dfg_test.cpp  feir_stmt_loc_test.cpp  feir_stmt_test.cpp  feir_test_base.cpp  feir_test_base.h  feir_type_helper_test.cpp  feir_type_infer_test.cpp  feir_type_test.cpp  feir_var_test.cpp  jbc_class2fe_helper_test.cpp  jbc_class_const_test.cpp  jbc_class_test.cpp  jbc_function_test.cpp  (+14 more)
(+2072 files in other folders)
