#
# Copyright (c) [2020] Huawei Technologies Co.,Ltd.All rights reserved.
#
# OpenArkCompiler is licensed under the Mulan PSL v1.
# You can use this software according to the terms and conditions of the Mulan PSL v1.
# You may obtain a copy of Mulan PSL v1 at:
#
#     http://license.coscl.org.cn/MulanPSL
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v1 for more details.
#
configs = [ "${MAPLEALL_ROOT}:mapleallcompilecfg" ]
if (COV_CHECK == 1) {
  cflags = [ "-DENABLE_COV_CHECK=1" ]
}

include_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/jbc_input/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_ipa/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_phase/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mpl2mpl/include",
  "${MAPLEALL_ROOT}/maple_me/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLEALL_ROOT}/huawei_secure_c/include",
]

static_library("lib_mplfe_util") {
  sources = [
    "${MPLFE_ROOT}/common/src/base64.cpp",
    "${MPLFE_ROOT}/common/src/basic_io.cpp",
    "${MPLFE_ROOT}/common/src/fe_config_parallel.cpp",
    "${MPLFE_ROOT}/common/src/fe_file_ops.cpp",
    "${MPLFE_ROOT}/common/src/fe_file_type.cpp",
    "${MPLFE_ROOT}/common/src/fe_function.cpp",
    "${MPLFE_ROOT}/common/src/fe_function_phase_result.cpp",
    "${MPLFE_ROOT}/common/src/fe_input_helper.cpp",
    "${MPLFE_ROOT}/common/src/fe_java_string_manager.cpp",
    "${MPLFE_ROOT}/common/src/fe_manager.cpp",
    "${MPLFE_ROOT}/common/src/fe_options.cpp",
    "${MPLFE_ROOT}/common/src/fe_struct_elem_info.cpp",
    "${MPLFE_ROOT}/common/src/fe_timer_ns.cpp",
    "${MPLFE_ROOT}/common/src/fe_type_hierarchy.cpp",
    "${MPLFE_ROOT}/common/src/fe_type_manager.cpp",
    "${MPLFE_ROOT}/common/src/fe_utils.cpp",
    "${MPLFE_ROOT}/common/src/fe_utils_java.cpp",
    "${MPLFE_ROOT}/common/src/feir_builder.cpp",
    "${MPLFE_ROOT}/common/src/feir_dfg.cpp",
    "${MPLFE_ROOT}/common/src/feir_stmt.cpp",
    "${MPLFE_ROOT}/common/src/feir_type.cpp",
    "${MPLFE_ROOT}/common/src/feir_type_helper.cpp",
    "${MPLFE_ROOT}/common/src/feir_type_infer.cpp",
    "${MPLFE_ROOT}/common/src/feir_var.cpp",
    "${MPLFE_ROOT}/common/src/feir_var_name.cpp",
    "${MPLFE_ROOT}/common/src/feir_var_reg.cpp",
    "${MPLFE_ROOT}/common/src/feir_var_type_scatter.cpp",
    "${MPLFE_ROOT}/common/src/general_bb.cpp",
    "${MPLFE_ROOT}/common/src/general_cfg.cpp",
    "${MPLFE_ROOT}/common/src/general_stmt.cpp",
    "${MPLFE_ROOT}/common/src/mplfe_compiler.cpp",
    "${MPLFE_ROOT}/common/src/mplfe_compiler_component.cpp",
    "${MPLFE_ROOT}/common/src/mplfe_env.cpp",
    "${MPLFE_ROOT}/common/src/mplfe_options.cpp",
    "${MPLFE_ROOT}/common/src/simple_xml.cpp",
    "${MPLFE_ROOT}/common/src/simple_zip.cpp",
  ]
  include_dirs = include_directories
}

static_library("lib_mplfe_input") {
  sources = [
    "${MPLFE_ROOT}/common/src/fe_input_helper.cpp",
  ]
  include_dirs = include_directories
}

executable("mplfe") {
  sources = [
    "${MPLFE_ROOT}/common/src/mplfe.cpp",
  ]
  include_dirs = include_directories
  deps = [
    ":lib_mplfe_input",
    ":lib_mplfe_jbc_input",
    ":lib_mplfe_util",
    "${MAPLEALL_ROOT}/huawei_secure_c:libHWSecureC",
    "${MAPLEALL_ROOT}/maple_driver:libdriver_option",
    "${MAPLEALL_ROOT}/maple_ir:libmplir",
    "${MAPLEALL_ROOT}/mpl2mpl:libmpl2mpl",
  ]
  libs = [
    "${OPENSOURCE_DEPS}/libmempool.a",
    "${OPENSOURCE_DEPS}/libmplutil.a",
  ]
  ldflags = [ "-lz" ]
}

include_jbc_input_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/jbc_input/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLEALL_ROOT}/huawei_secure_c/include",
]

static_library("lib_mplfe_jbc_input") {
  sources = [
    "${MPLFE_ROOT}/jbc_input/src/jbc_attr.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_attr_item.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_bb.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_class.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_class2fe_helper.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_class_const.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_class_const_pool.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_compiler_component.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_function.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_function_context.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_input.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_opcode.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_opcode_helper.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_stack2fe_helper.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_stack_helper.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_stmt.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_util.cpp",
  ]
  include_dirs = include_jbc_input_directories
}
